--- a/index.html
+++ b/index.html
@@ -4,29 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="header">
+      <nav class="nav">
         <!-- logo -->
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html"
+          ><span class="accent">Web</span>Studio</a
+        >
 
         <!-- menu -->
-        <ul>
-          <li><a href="#Studio">Studio</a></li>
-          <li><a href="#Portfolio">Portfolio</a></li>
-          <li><a href="#Contacts">Contacts</a></li>
+        <ul class="menu">
+          <li class="menu-item">
+            <a class="menu-link" href="#Studio">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#Portfolio">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="#Contacts">Contacts</a>
+          </li>
         </ul>
       </nav>
 
       <!-- info -->
       <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="adress">
+          <li class="adress-item">
+            <a class="address-item-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="adress-item">
+            <a class="address-item-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -35,40 +59,40 @@
     <main>
       <!-- hero image -->
 
-      <section id="Studio">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero" id="Studio">
+        <h1 class="hero-titel">Effective Solutions for Your Business</h1>
+        <button class="hero-buttom" type="button">Order Service</button>
       </section>
 
       <!-- info -->
 
-      <section id="Portfolio">
-        <h2 hidden>Benefits</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="info">
+        <h2 class="visually-hidden">Benefits</h2>
+        <ul class="info-list">
+          <li class="info-list-item">
+            <h3 class="info-tittel">Strategy</h3>
+            <p class="info-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="info-list-item">
+            <h3 class="info-tittel">Punctuality</h3>
+            <p class="info-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="info-list-item">
+            <h3 class="info-tittel">Diligence</h3>
+            <p class="info-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="info-list-item">
+            <h3 class="info-tittel">Technologies</h3>
+            <p class="info-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -78,57 +102,138 @@
 
       <!-- team -->
 
-      <section id="Contacts">
-        <h2>Our Team</h2>
+      <section class="contacts" id="Contacts">
+        <h2 class="contacts-tittle section-tittle">Our Team</h2>
 
-        <ul>
-          <li>
+        <ul class="contacts-list">
+          <li class="contacts-list-item">
             <img
+              class="contacts-img"
               src="./images/img3.jpg"
               alt="Mark Guerrero foto"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="contacts-name">Mark Guerrero</h3>
+            <p class="contacts-text">Product Designer</p>
           </li>
-          <li>
+          <li class="contacts-list-item">
             <img
+              class="contacts-img"
               src="./images/img2.jpg"
               alt="Tom Ford foto"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="contacts-name">Tom Ford</h3>
+            <p class="contacts-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="contacts-list-item">
             <img
+              class="contacts-img"
               src="./images/img1.jpg"
               alt="Camila Garcia foto"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="contacts-name">Camila Garcia</h3>
+            <p class="contacts-text">Marketing</p>
           </li>
-          <li>
+          <li class="contacts-list-item">
             <img
+              class="contacts-img"
               src="./images/img.jpg"
               alt="Daniel Wilson foto"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="contacts-name">Daniel Wilson</h3>
+            <p class="contacts-text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- portfolio -->
+
+      <section class="portfolio" id="Portfolio">
+        <h2 class="portfolio-herotittel section-tittle">Our Portfolio</h2>
+
+        <ul class="portfolio-list">
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-img"
+              src="./images/img-portfolio5.jpg"
+              alt="Banking App foto"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-tittle">Banking App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-img"
+              src="./images/img-portfolio4.jpg"
+              alt="Cashless Payment foto"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-tittle">Cash less Payment</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-img"
+              src="./images/img-portfolio3.jpg"
+              alt="Meditation App foto"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-tittle">Me ditation App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-img"
+              src="./images/img-portfolio2.jpg"
+              alt="Taxi Service foto"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-tittle">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-img"
+              src="./images/img-portfolio1.jpg"
+              alt="Screen Illustrations foto"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-tittle">Scre en Illustrations</h3>
+            <p class="portfolio-text">Design</p>
+          </li>
+          <li class="portfolio-list-item">
+            <img
+              class="portfolio-img"
+              src="./images/img-portfolio.jpg"
+              alt="Online Courses foto"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-tittle">On line Courses</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-link" href="./index.html"
+        ><span class="accent">Web</span>Studio</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
