--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
       <nav class="nav">
         <!-- logo -->
         <a class="logo" href="./index.html"
-          ><span class="accent">Web</span>Studio</a
+          >Web<span class="accent">Studio</span></a
         >
 
         <!-- menu -->
         <ul class="menu">
           <li class="menu-item">
-            <a class="menu-link" href="#Studio">Studio</a>
+            <a class="menu-link" href="./index.html">Studio</a>
           </li>
-          <li class="menu-item">
+          <li class="">
             <a class="menu-link" href="#Portfolio">Portfolio</a>
           </li>
-          <li class="menu-item">
+          <li class="">
             <a class="menu-link" href="#Contacts">Contacts</a>
           </li>
         </ul>
       </nav>
 
       <!-- info -->
-      <address>
-        <ul class="adress">
+      <address class="adress">
+        <ul class="adress-list">
           <li class="adress-item">
             <a class="address-item-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -61,7 +61,7 @@
 
       <section class="hero" id="Studio">
         <h1 class="hero-titel">Effective Solutions for Your Business</h1>
-        <button class="hero-buttom" type="button">Order Service</button>
+        <button type="button">Order Service</button>
       </section>
 
       <!-- info -->
@@ -178,7 +178,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-tittle">Cash less Payment</h3>
+            <h3 class="portfolio-tittle">Cashless Payment</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
           <li class="portfolio-list-item">
@@ -189,7 +189,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-tittle">Me ditation App</h3>
+            <h3 class="portfolio-tittle">Meditation App</h3>
             <p class="portfolio-text">App</p>
           </li>
           <li class="portfolio-list-item">
@@ -211,7 +211,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-tittle">Scre en Illustrations</h3>
+            <h3 class="portfolio-tittle">Screen Illustrations</h3>
             <p class="portfolio-text">Design</p>
           </li>
           <li class="portfolio-list-item">
@@ -222,7 +222,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-tittle">On line Courses</h3>
+            <h3 class="portfolio-tittle">Online Courses</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
@@ -231,7 +231,7 @@
 
     <footer class="footer">
       <a class="footer-link" href="./index.html"
-        ><span class="accent">Web</span>Studio</a
+        >Web<span class="accent">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
