--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <a class="menu-link" href="./index.html">Studio</a>
           </li>
           <li class="">
-            <a class="menu-link" href="#Portfolio">Portfolio</a>
+            <a class="menu-link" href="">Portfolio</a>
           </li>
           <li class="">
-            <a class="menu-link" href="#Contacts">Contacts</a>
+            <a class="menu-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -61,13 +61,13 @@
 
       <section class="hero" id="Studio">
         <h1 class="hero-titel">Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="button" type="button">Order Service</button>
       </section>
 
       <!-- info -->
 
       <section class="info">
-        <h2 class="visually-hidden">Benefits</h2>
+        <h2 hidden>Benefits</h2>
         <ul class="info-list">
           <li class="info-list-item">
             <h3 class="info-tittel">Strategy</h3>
@@ -231,7 +231,7 @@
 
     <footer class="footer">
       <a class="footer-link" href="./index.html"
-        >Web<span class="accent">Studio</span></a
+        >Web<span class="accent-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
