--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@100..900&display=swap"
       rel="stylesheet"
     />
     <!-- Normalays CSS -->
@@ -26,7 +23,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="header-container">
         <nav class="nav">
           <!-- logo -->
           <a class="logo" href="./index.html"
@@ -67,7 +64,7 @@
       <!-- hero image -->
 
       <section class="hero" id="Studio">
-        <div class="container">
+        <div class="hero-container">
           <h1 class="hero-titel">Effective Solutions for Your Business</h1>
           <button class="button" type="button">Order Service</button>
         </div>
@@ -125,8 +122,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="contacts-name">Mark Guerrero</h3>
-              <p class="contacts-text">Product Designer</p>
+              <div class="contact-name-container">
+                <h3 class="contacts-name">Mark Guerrero</h3>
+                <p class="contacts-text">Product Designer</p>
+              </div>
             </li>
             <li class="contacts-list-item">
               <img
@@ -136,8 +135,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="contacts-name">Tom Ford</h3>
-              <p class="contacts-text">Frontend Developer</p>
+              <div class="contact-name-container">
+                <h3 class="contacts-name">Tom Ford</h3>
+                <p class="contacts-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="contacts-list-item">
               <img
@@ -147,8 +148,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="contacts-name">Camila Garcia</h3>
-              <p class="contacts-text">Marketing</p>
+              <div class="contact-name-container">
+                <h3 class="contacts-name">Camila Garcia</h3>
+                <p class="contacts-text">Marketing</p>
+              </div>
             </li>
             <li class="contacts-list-item">
               <img
@@ -158,8 +161,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="contacts-name">Daniel Wilson</h3>
-              <p class="contacts-text">UI Designer</p>
+              <div class="contact-name-container">
+                <h3 class="contacts-name">Daniel Wilson</h3>
+                <p class="contacts-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -174,68 +179,80 @@
             <li class="portfolio-list-item">
               <img
                 class="portfolio-img"
-                src="./images/img-portfolio5.jpg"
+                src="./images/img-portfolio.jpg"
                 alt="Banking App foto"
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-tittle">Banking App</h3>
-              <p class="portfolio-text">App</p>
-            </li>
-            <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/img-portfolio4.jpg"
-                alt="Cashless Payment foto"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-tittle">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
-            </li>
-            <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/img-portfolio3.jpg"
-                alt="Meditation App foto"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-tittle">Meditation App</h3>
-              <p class="portfolio-text">App</p>
-            </li>
-            <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/img-portfolio2.jpg"
-                alt="Taxi Service foto"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-tittle">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-carts">
+                <h3 class="portfolio-tittle">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
                 class="portfolio-img"
                 src="./images/img-portfolio1.jpg"
-                alt="Screen Illustrations foto"
+                alt="Cashless Payment foto"
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-tittle">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
+              <div class="portfolio-carts">
+                <h3 class="portfolio-tittle">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
                 class="portfolio-img"
-                src="./images/img-portfolio.jpg"
+                src="./images/img-portfolio2.jpg"
+                alt="Meditation App foto"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-carts">
+                <h3 class="portfolio-tittle">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/img-portfolio3.jpg"
+                alt="Taxi Service foto"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-carts">
+                <h3 class="portfolio-tittle">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/img-portfolio4.jpg"
+                alt="Screen Illustrations foto"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-carts">
+                <h3 class="portfolio-tittle">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/img-portfolio5.jpg"
                 alt="Online Courses foto"
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-tittle">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-carts">
+                <h3 class="portfolio-tittle">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -243,7 +260,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="footer-container">
         <a class="footer-link" href="./index.html"
           >Web<span class="accent-footer">Studio</span></a
         >
