--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <section class="info">
         <div class="container">
-          <h2 hidden>Benefits</h2>
+          <h2 class="visually-hidden">Benefits</h2>
           <ul class="info-list">
             <li class="info-list-item">
               <h3 class="info-tittel">Strategy</h3>
